objects/CMPL123__MDC_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Child_Condition__c</fullName>
        <label>Child Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related Record Added/Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value changed</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Related Record Added/Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Criteria__c</fullName>
        <label>Trigger Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created or Changed</fullName>
                    <default>true</default>
                    <label>Created or Changed</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Pick list</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Text area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Data__c</fullName>
        <label>Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <inlineHelpText>Don't add more than 30000 characters.</inlineHelpText>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Selection__c</fullName>
        <label>Field Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Relations</fullName>
                </value>
                <value>
                    <fullName>Parent Relations</fullName>
                </value>
                <value>
                    <fullName>Object Fields</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Logic__c</fullName>
        <inlineHelpText>Please Enter you logic for Filed Conditions Exp: 1 AND(2 OR 3)</inlineHelpText>
        <label>Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__No__c</fullName>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Number_of_Acks__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Acks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parameters__c</fullName>
        <label>Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Public_Group__c</fullName>
        <description>Select a group for MDC Ticket Acknowledgement</description>
        <label>Public Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Detail_Field__c</fullName>
        <label>Record Detail Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Related_objects_list__c</fullName>
        <label>Related objects list</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Select_Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Status__c</fullName>
        <description>This will hold the MDC trigger status.</description>
        <formula>CMPL123__Active__c</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Object_User_Fields__c</fullName>
        <label>Target Object User Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Trigger_Criteria__c</fullName>
        <label>Trigger Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Field</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDC_Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MDC Trigger</label>
    <nameField>
        <label>MDC Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDC Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMPL123__MDC</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CMPL123__Select_Target_Object__c</columns>
        <columns>CMPL123__Logic__c</columns>
        <columns>CMPL123__Condition__c</columns>
        <columns>CMPL123__Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CMPL123__Number_of_Acks__c</columns>
        <columns>CMPL123__Data_Type__c</columns>
        <columns>CMPL123__Field_Name__c</columns>
        <columns>CMPL123__Public_Group__c</columns>
        <columns>CMPL123__User_Field__c</columns>
        <columns>CMPL123__Target_Object_User_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>MDC</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>CMPL123__Acknowledgment_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL($ObjectType.CMPL123__AcknowledgementMapping__c.Fields.CMPL123__PublicGroupAcknowledgment__c )&amp;&amp;   ISNULL(CMPL123__Public_Group__c)</errorConditionFormula>
        <errorMessage>Select at least one Public group or user for Acknowledgement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Equalto_1</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(CMPL123__Number_of_Acks__c )</errorConditionFormula>
        <errorDisplayField>CMPL123__Number_of_Acks__c</errorDisplayField>
        <errorMessage>Enter value must be equal or greater then 1.</errorMessage>
    </validationRules>
</CustomObject>